# SmartWatch

./: .cproject  .gitignore  .gitignore~  .project  README.md
main/: CMakeLists.txt  adxl.c  adxl.h  dht22.c  dht22.h  dht22_2.c  dht22_2.h  font8x8_basic.c  font8x8_basic.h  i2c_display.c  i2c_display.h  main.c  main.h  max30102.h  sntp_service.c  sntp_service.h  ssd1366.h  wifi_app.c  wifi_app.h  wifi_connect.c  wifi_connect.h
